--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ html, body {
 canvas {
   display: block;
 }
+
+
+.logo-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 1rem;
+  padding-left: 2rem;
+
+  img {
+    width: 2vw;
+  }
+}
